<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp"
    tools:context=".PracticeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gender_title"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/bottom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data from Main Activity:"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/display_data"
        app:layout_constraintStart_toStartOf="parent
" />

    <TextView
        android:id="@+id/display_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        />

    <TextView
        android:id="@+id/checkbox_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/choose_languages"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_title">


        <CheckBox
            android:id="@+id/java_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Java"
            android:textSize="15sp"

            />

        <CheckBox
            android:id="@+id/hibernate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hibernate"
            android:textSize="15sp"

            />

        <CheckBox
            android:id="@+id/php_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PHP"
            android:textSize="15sp"

            />

        <CheckBox
            android:id="@+id/js_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Js"
            android:textSize="15sp"

            />

        <CheckBox
            android:id="@+id/spring_boot_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Spring Boot"
            android:textSize="15sp"

            />

        <CheckBox
            android:id="@+id/react_js_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="React Js"
            android:textSize="15sp" />
    </GridLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_language_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_selected_languages"
        app:layout_constraintStart_toStartOf="parent
"
        app:layout_constraintTop_toBottomOf="@id/grid_layout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_language_btn"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select City :"
            android:textSize="20sp"
            />
        <Spinner
            android:id="@+id/spinner_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_language_btn"

            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>